@@ -1,3 +1,4 @@
+	* disable support for large MTUs in uTP until it is more reliable
 	* expose post_torrent_updates and state_update_alert to python bindings
 	* fix incorrect SSL error messages
 	* fix windows build of shared library with openssl
